src/main/java/semantic/symbolTable/test/failing/inheritance_not_found.ru
struct A:B {
    pri Int a;
}

impl A {
    .(){}
}

start{}